chore: 原版本 b6a7f38c ~ cf7e20f8
修正手機版商品card放大時消失的問題、
add GA domains、
add GA to modules、
修正結帳跳轉

--- a/assets/sass/layout/_shop-layout.sass
+++ b/assets/sass/layout/_shop-layout.sass
@@ -86,16 +86,19 @@
 
         img
           width: 100%
-      .big-img_block:hover  
+      .big-img_block:hover,
+      .big-img_block:focus
         img
           display: none
-        .zoomImg 
+        .zoomImg
           display: block
         @media screen and ( max-width: 767px )
           img
             display: block
-          .zoomImg
-            display: none !important
+
+      .zoomImg
+        @media screen and ( max-width: 767px )
+          display: none !important
 
     .slide-img
       overflow: hidden
