feat: 購物車彈窗顯示金額

--- a/assets/sass/component/index.sass
+++ b/assets/sass/component/index.sass
@@ -23,6 +23,7 @@
 @import 'component/order-step'
 @import 'component/order-tracking'
 @import 'component/preload'
+@import 'component/price-rate'
 @import 'component/product'
 @import 'component/quickview'
 @import 'component/share_button'
