fix: sold out 功能

--- a/assets/sass/component/index.sass
+++ b/assets/sass/component/index.sass
@@ -6,6 +6,7 @@
 @import 'component/breadcrumb'
 @import 'component/button'
 @import 'component/card-border'
+@import 'component/cart-product'
 @import 'component/ckeditor'
 @import 'component/counter-input'
 @import 'component/delivery'
