feat: 購物車 顯示顏色及文字

--- a/assets/sass/basic/_color.sass
+++ b/assets/sass/basic/_color.sass
@@ -13,7 +13,11 @@ $line: #ebebeb
 $line-2: #f5f5f5
 $trans: transparent
 $border: 1px solid #f5f5f5
+$red: #DC1935
 .primary-color
   color: $primary-color !important
 
+
+.red-color
+  color: $red !important
 
