feat: 會員回饋 版型先出來/npm install

--- a/assets/sass/component/index.sass
+++ b/assets/sass/component/index.sass
@@ -27,6 +27,7 @@
 @import 'component/price-rate'
 @import 'component/product'
 @import 'component/quickview'
+@import 'component/reward-record-table'
 @import 'component/share_button'
 @import 'component/shop-sidebar'
 @import 'component/tab'
