--- a/assets/sass/basic/_color.sass
+++ b/assets/sass/basic/_color.sass
@@ -14,10 +14,14 @@ $line-2: #f5f5f5
 $trans: transparent
 $border: 1px solid #f5f5f5
 $red: #DC1935
+$gray-text: #adb5bd
 .primary-color
   color: $primary-color !important
 
 
 .red-color
   color: $red !important
+
+.gray-text
+  color: $gray-text !important
 
