chore: merge form ezgo

--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -1,368 +1,388 @@
-footer 
-	.footer-logo 
-		margin-bottom: 20px
-	
-	.footer-contact 
-		margin-bottom: 15px
-		p 
-			@include font-regular(16px, $regular, 36px)
-		
-	
-	.footer-social 
-		a 
-		    height: 40px
-		    width: 40px
-		    line-height: 40px
-		    text-align: center
-		    margin-right: 12px
-		    color: $regular
-		
-	
-	.footer-quicklink 
-		display: flex
-		flex-direction: column
-		h5 
-			@include font-bold(16px, $title, 1)
-			text-transform: uppercase
-		    margin-bottom: 26px
-    		margin-top: 16px
-		
-		a 
-			@include link-regular(16px, $regular, 36px, $primary-color)
-		a:hover
-			color: #FFF
-			font-weight: bold
-	
-	.newletter 
-		margin-top: 60px
-		padding: 30px
-		background-color: $primary-color
-		.newletter_text 
-			h5 
-				@include font-bold(22px, $white, 1)
-				margin-bottom: 10px
-			
-			p 
-				@include font-medium(16px, $white, 24px)
-			
-		
-		.newletter_input 
-			position: relative
-			input 
-				height: 50px
-				background-color: #98d25f
-				border: 0
-				caret-color: $white
-				color: $white
-				&::placeholder 
-					color: $white
-				
-			
-			button 
-				position: absolute
-				top: 0
-				right: 0
-				height: 50px
-				@include button($white,$primary-color,16px,999px,2px,$white,15px 30px,#ffffff96,$primary-color,#ffffff96)
-				border-top-left-radius: 0
-				border-bottom-left-radius: 0
-				
-			
-		
-	
-	.footer-v2_header 
-		padding-bottom: 50px
-		border-bottom: 1px solid $line
-		.newletter_v2 
-			margin-top: 0
-			background-color: $trans
-			padding: 0
-			.newletter_text 
-				margin-bottom: 25px
-				h5 
-					@include font-bold(16px, $title, 1)
-					margin-bottom: 30px
-					margin-top: 16px
-				
-				p 
-					@include font-medium(16px, $regular, 24px)
-					line-height: 26px
-				
-			
-			.newletter_input 
-				position: relative
-				input 
-					background-color: $subcolor-7
-					caret-color: unset
-					color: $title
-					&::placeholder 
-						color: $disable-2
-					
-				
-				button 
-					position: absolute
-					top: 0
-					right: 0
-					height: 50px
-					@include button($primary-color,$white,13px,999px,2px,$primary-color,15px 30px,$trans,$primary-color,$primary-color)
-					border-top-left-radius: 0
-					border-bottom-left-radius: 0
-					
-				
-			
-		
-		
-	.footer-credit 
-		padding: 15px 0
-		.footer-creadit_block 
-			p 
-				@include font-medium(16px, $regular, 1)
-				line-height: 20px
+footer
+  .footer-logo
+    margin-bottom: 20px
 
-footer.pink 
-	.footer-quicklink 
-		a 
-			@include link-medium(16px, $regular, 36px, $pink)
-		
-	
-	.newletter 
-		background-color: $pink
-		.newletter_input 
-			position: relative
-			input 
-				background-color: #ff9795
-			
-			button 
-				position: absolute
-				top: 0
-				right: 0
-				height: 50px
-				@include button($white,$pink,16px,999px,2px,$white,15px 30px,#ffffff96,$pink,#ffffff96)
-				border-top-left-radius: 0
-				border-bottom-left-radius: 0
-				
-footer.coffee 
-	.footer-quicklink 
-		a 
-			@include link-medium(16px, $regular, 36px, $coffee)
-		
-	
-	.newletter 
-		background-color: $coffee
-		.newletter_input 
-			position: relative
-			input 
-				background-color: #ffbb67
-			
-			button 
-				position: absolute
-				top: 0
-				right: 0
-				height: 50px
-				@include button($white,$coffee,16px,999px,2px,$white,15px 30px,#ffffff96,$coffee,#ffffff96)
-				border-top-left-radius: 0
-				border-bottom-left-radius: 0
-				
-			
-		
-	
+  .footer-contact
+    margin-bottom: 15px
+
+    p
+      @include font-regular(16px, $regular, 36px)
 
 
-@include mobile 
-	footer 
-		.footer-social 
-			margin-bottom: 30px
-		
-		.footer-quicklink 
-			margin-bottom: 20px
-			h5 
-				margin-bottom: 20px
-    			margin-top: 0px
-			
-		
-		.newletter 
-			margin-top: 0
-			padding: 30px 0
-			.newletter_text 
-				margin-bottom: 20px
-			
-		
-		.footer-credit 
-			.footer-creadit_block 
-				p 
-					margin-bottom: 10px
-				
-			
-		
-		
+  .footer-social
+    a
+      height: 40px
+      width: 40px
+      line-height: 40px
+      text-align: center
+      margin-right: 12px
+      color: $regular
 
 
-@include tablet 
-	footer 
-		.footer-social 
-			margin-bottom: 30px
-		
-		.newletter 
-			margin-top: 0
-			.newletter_text 
-				margin-bottom: 20px
-			
-		
-		.footer-quicklink 
-			margin-bottom: 20px
-			h5 
-				margin-bottom: 20px
-				margin-top: 0
-			
-		
-		.footer-credit 
-			.footer-creadit_block 
-				p 
-					margin-bottom: 10px
-				
-				.payment-method 
-					max-width: 150px
-				
-			
-		
-	
+  .footer-quicklink
+    display: flex
+    flex-direction: column
+
+    h5
+      @include font-bold(16px, $title, 1)
+      text-transform: uppercase
+        margin-bottom: 26px
+        margin-top: 16px
+
+    a
+      @include link-regular(16px, $regular, 30px, $primary-color)
+
+    a:hover
+      color: #FFF
+      font-weight: bold
+
+  .newletter
+    margin-top: 60px
+    padding: 30px
+    background-color: $primary-color
+
+    .newletter_text
+      h5
+        @include font-bold(22px, $white, 1)
+        margin-bottom: 10px
+
+      p
+        @include font-medium(16px, $white, 24px)
 
 
-@include small-desktop 
-	footer 
-		.footer-v2_header 
-			.footer-social 
-				margin-bottom: 30px
-			
-		
-		.footer-quicklink 
-			margin-bottom: 30px
-		
-	
+    .newletter_input
+      position: relative
+
+      input
+        height: 50px
+        background-color: #98d25f
+        border: 0
+        caret-color: $white
+        color: $white
+
+        &::placeholder
+          color: $white
+
+
+      button
+        position: absolute
+        top: 0
+        right: 0
+        height: 50px
+        @include button($white, $primary-color, 16px, 999px, 2px, $white, 15px 30px, #ffffff96, $primary-color, #ffffff96)
+        border-top-left-radius: 0
+        border-bottom-left-radius: 0
+
+
+  .footer-v2_header
+    padding-bottom: 50px
+    border-bottom: 1px solid $line
+
+    .newletter_v2
+      margin-top: 0
+      background-color: $trans
+      padding: 0
+
+      .newletter_text
+        margin-bottom: 25px
+
+        h5
+          @include font-bold(16px, $title, 1)
+          margin-bottom: 30px
+          margin-top: 16px
+
+        p
+          @include font-medium(16px, $regular, 24px)
+          line-height: 26px
+
+
+      .newletter_input
+        position: relative
+
+        input
+          background-color: $subcolor-7
+          caret-color: unset
+          color: $title
+
+          &::placeholder
+            color: $disable-2
+
+
+        button
+          position: absolute
+          top: 0
+          right: 0
+          height: 50px
+          @include button($primary-color, $white, 13px, 999px, 2px, $primary-color, 15px 30px, $trans, $primary-color, $primary-color)
+          border-top-left-radius: 0
+          border-bottom-left-radius: 0
+
+
+  .footer-credit
+    padding: 15px 0
+
+    .footer-creadit_block
+      p
+        @include font-medium(16px, $regular, 1)
+        line-height: 20px
+
+footer.pink
+  .footer-quicklink
+    a
+      @include link-medium(16px, $regular, 30px, $pink)
+
+
+  .newletter
+    background-color: $pink
+
+    .newletter_input
+      position: relative
+
+      input
+        background-color: #ff9795
+
+      button
+        position: absolute
+        top: 0
+        right: 0
+        height: 50px
+        @include button($white, $pink, 16px, 999px, 2px, $white, 15px 30px, #ffffff96, $pink, #ffffff96)
+        border-top-left-radius: 0
+        border-bottom-left-radius: 0
+
+footer.coffee
+  .footer-quicklink
+    a
+      @include link-medium(16px, $regular, 30px, $coffee)
+
+
+  .newletter
+    background-color: $coffee
+
+    .newletter_input
+      position: relative
+
+      input
+        background-color: #ffbb67
+
+      button
+        position: absolute
+        top: 0
+        right: 0
+        height: 50px
+        @include button($white, $coffee, 16px, 999px, 2px, $white, 15px 30px, #ffffff96, $coffee, #ffffff96)
+        border-top-left-radius: 0
+        border-bottom-left-radius: 0
+
+
+@include mobile
+  footer
+    .footer-social
+      margin-bottom: 30px
+
+    .footer-quicklink
+      margin-bottom: 20px
+
+      h5
+        margin-bottom: 20px
+          margin-top: 0px
+
+
+    .newletter
+      margin-top: 0
+      padding: 30px 0
+
+      .newletter_text
+        margin-bottom: 20px
+
+
+    .footer-credit
+      .footer-creadit_block
+        p
+          margin-bottom: 10px
+
+
+@include tablet
+  footer
+    .footer-social
+      margin-bottom: 30px
+
+    .newletter
+      margin-top: 0
+
+      .newletter_text
+        margin-bottom: 20px
+
+
+    .footer-quicklink
+      margin-bottom: 20px
+
+      h5
+        margin-bottom: 20px
+        margin-top: 0
+
+
+    .footer-credit
+      .footer-creadit_block
+        p
+          margin-bottom: 10px
+
+        .payment-method
+          max-width: 150px
+
+
+@include small-desktop
+  footer
+    .footer-v2_header
+      .footer-social
+        margin-bottom: 30px
+
+
+    .footer-quicklink
+      margin-bottom: 30px
+
+
 $footer-left-max-width: 850px
 .footer-left, .footer-quicklink
-  	+max-width($footer-left-max-width)
-	  	margin-bottom: 20px
+  +max-width($footer-left-max-width)
+    margin-bottom: 20px
     *
-      	text-align: center
+      text-align: center
 
 
 .footer-margin
-  	+max-width($footer-left-max-width)
-  	  	margin-bottom: 40px
+  +max-width($footer-left-max-width)
+    margin-bottom: 40px
 
-  	+max-width(575px)
-  	  	margin-bottom: 0px
+  +max-width(575px)
+    margin-bottom: 0px
 
 .footer-left
-  	+max-width($footer-left-max-width)
-    	flex: 0 0 100%
-    	max-width: 100%
+  +max-width($footer-left-max-width)
+    flex: 0 0 100%
+    max-width: 100%
 
 .col-md-8.foot-right
-  	@media all and (max-width: $footer-left-max-width)
-    	flex: 0 0 100%
-    	max-width: 100%
+  @media all and (max-width: $footer-left-max-width)
+    flex: 0 0 100%
+    max-width: 100%
 
 .author-footer
-  	.left
-  	  	margin-bottom: 20px
+  .left
+    margin-bottom: 20px
 
-  	  	.color1
-  	    	color: #B6B6B6
+    .color1
+      color: #B6B6B6
 
-  	  	.color2
-  	  	  	color: #E2E2E2
+    .color2
+      color: #E2E2E2
 
-  	  	+max-width(500px)
-  	  	  	.color1, .color2
-  	  	    	font-size: 12px !important
+    +max-width(500px)
+      .color1, .color2
+        font-size: 12px !important
 
-  	.right
-  	  	margin-bottom: 20px
+  .right
+    margin-bottom: 20px
 
 .conquer-icon
-  	background-image: url("../images/webs/conquerlogo.svg")
-  	+size(105px, 15px)
-  	background-repeat: no-repeat
-  	background-position: center
-  	background-size: cover
-  	display: flex
+  background-image: url("../images/webs/conquerlogo.svg")
+  +size(105px, 15px)
+  background-repeat: no-repeat
+  background-position: center
+  background-size: cover
+  display: flex
 
-  	&:hover
-  	  	background-image: url("../images/webs/conquerlogo_y.svg")
+  &:hover
+    background-image: url("../images/webs/conquerlogo_y.svg")
 
 .l-footer__footer
-	+max-width(400px)
-		padding: 0
+  +max-width(400px)
+    padding: 0
+
 .footer-contact
-  	padding-top: 30px
+  padding-top: 30px
+
 .footer-quicklink__header-item
-	font-family: NotoSansTC-medium
-	margin: 0 auto
-	position: relative
-	.icon_plus,.icon_minus-06
-	  	position: absolute
-	  	right: -25px
-	  	top: 5px
+  font-family: NotoSansTC-medium
+  margin: 0 auto
+  position: relative
+
+  .icon_plus, .icon_minus-06
+    position: absolute
+    right: -25px
+    top: 12px
+
 .footer-logo
-  	a
-    	position: absolute
-    	width: 100px
-    	height: 40px
-    	background: url("../images/webs/LOGO_white.svg") 
-    	background-size: auto 100%
-    	background-repeat: no-repeat
-    	background-position: 0px center
-    	@media screen and ( max-width: 850px )
-    	  	left: calc(50% - 50px)
+  a
+    position: absolute
+    width: 100px
+    height: 40px
+    background: url("../images/webs/LOGO_white.svg")
+    background-size: auto 100%
+    background-repeat: no-repeat
+    background-position: 0px center
+    @media screen and (max-width: 850px)
+      left: calc(50% - 50px)
+
 .footer-margin
-  	@media screen and ( max-width: 575px )
-  	  	margin-bottom: 10px
+  @media screen and (max-width: 575px)
+    margin-bottom: 10px
+
 .footer-quicklink__header
-  	@media screen and ( max-width: 575px )
-  	  	justify-content: center !important
-  	div
-  	  	@media screen and ( max-width: 575px )
-  	    	max-width: unset
-  	.col-8
-  	  	@media screen and ( max-width: 575px )
-  	    	flex: 1
-  	.col-2
-  	  	@media screen and ( max-width: 575px )
-  	  	  	flex: 1
-  	  	  	text-align: left
-  	  	.icon_plus
-  	  	  	margin-left: -35px
-.bg-green 
-    background: #88c74a				
-footer .footer-contact p, footer .footer-quicklink a 
-    color: #fff
-.fb 
-    background-image: url("../images/webs/fb_g.svg")
-    width: 40px
-    height: 40px
+  @media screen and (max-width: 575px)
+    justify-content: center !important
+
+  div
+    @media screen and (max-width: 575px)
+      max-width: unset
+
+  .col-8
+    @media screen and (max-width: 575px)
+      flex: 1
+
+  .col-2
+    @media screen and (max-width: 575px)
+      flex: 1
+      text-align: left
+
+    .icon_plus
+      margin-left: -35px
+
+.bg-green
+  background: #88c74a
+
+footer .footer-contact p, footer .footer-quicklink a
+  color: #fff
+
+.fb
+  background-image: url("../images/webs/fb_g.svg")
+  width: 40px
+  height: 40px
 
 
-.fb:hover 
-    background-image: url("../images/webs/fb_w.svg")
+.fb:hover
+  background-image: url("../images/webs/fb_w.svg")
 
 
-.line-icon 
-    background-image: url("../images/webs/line_g.svg")
-    width: 40px
-    height: 40px
+.line-icon
+  background-image: url("../images/webs/line_g.svg")
+  width: 40px
+  height: 40px
 
 
-.line-icon:hover 
-    background-image: url("../images/webs/line_w.svg")
+.line-icon:hover
+  background-image: url("../images/webs/line_w.svg")
 
 
-.twitter 
-    background-image: url("../images/webs/twitter_g.svg")
-    width: 40px
-    height: 40px
+.twitter
+  background-image: url("../images/webs/twitter_g.svg")
+  width: 40px
+  height: 40px
 
 
-.twitter:hover 
-    background-image: url("../images/webs/twitter_w.svg")
+.twitter:hover
+  background-image: url("../images/webs/twitter_w.svg")
+
+
+.footer-quicklink__header-item
+  line-height: 40px
