--- a/assets/sass/layout/index.sass
+++ b/assets/sass/layout/index.sass
@@ -24,3 +24,11 @@
 @import 'layout/shop-compare'
 @import 'layout/shop-layout'
 @import 'layout/slider'
+
+@media (max-width: 576px)
+  .no-gutters-sm
+    margin-left: -15px
+    margin-right: -15px
+  .no-gutters-sm > .col, .no-gutters-sm > [class*="col-"]
+    padding-right: 0
+    padding-left: 0
