--- a/assets/sass/component/_v-select-button.sass
+++ b/assets/sass/component/_v-select-button.sass
@@ -5,7 +5,7 @@
   -moz-box-sizing: border-box
   box-sizing: border-box
   padding: .25rem .75rem
-  margin: 0 8px 8px 0
+  margin-right: 8px
   color: rgba(0, 0, 0, .8)
   text-align: left
   border-radius: 2px
