--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -304,7 +304,7 @@ $footer-left-max-width: 850px
 
 .footer-quicklink__header-item
   font-family: NotoSansTC-medium
-  margin: 0 auto
+  margin: 0 0
   position: relative
 
   .icon_plus, .icon_minus-06
