--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -386,3 +386,8 @@ footer .footer-contact p, footer .footer-quicklink a
 
 .footer-quicklink__header-item
   line-height: 40px
+
+.fooer-bottom-box
+  height: 100px
+  border-top: 1px solid rgba(216, 216, 216, 0.18)
+  //border-top: solid 1px rgba(216 216 216, 0.18)
