--- a/assets/sass/layout/_footer.sass
+++ b/assets/sass/layout/_footer.sass
@@ -391,3 +391,7 @@ footer .footer-contact p, footer .footer-quicklink a
   height: 80px
   border-top: 1px solid rgba(216, 216, 216, 0.18)
   //border-top: solid 1px rgba(216 216 216, 0.18)
+
+.footer-copyright
+  color: white
+  font-size: 12px
