--- a/assets/sass/layout/_header.sass
+++ b/assets/sass/layout/_header.sass
@@ -799,3 +799,7 @@ i.arrow_carrot-down
     color: white !important
 .sub-menu.d-flex .nav-column li a
     line-height: 1.5!important
+.header-only-logo
+	background-color: $primary-color
+	height: 380px
+	border-top: solid 1px rgba(216, 216, 216, 0.18)
