chore: product 調整整體比例（剩下hover icon

--- a/assets/sass/component/_product.sass
+++ b/assets/sass/component/_product.sass
@@ -9,7 +9,9 @@
   z-index: 6
   transition: 0.3s ease
   margin-bottom: 10px
-  height: 580px
+  height: 620px
+  del
+    color: #0b1d37
 
   &.borderless
     border: 0
@@ -68,7 +70,6 @@
     width: 100%
     display: flex
     justify-content: center
-    align-items: center
 
     img
       max-width: 100%
@@ -97,6 +98,7 @@
         color: $primary-color
 
   .product-price
+    color: #e02020
     @include font-medium(20px, $title, 1)
     transition: .4s ease
 
@@ -550,7 +552,7 @@
   background: url(../images/product-label/label-green.svg) no-repeat center
   position: absolute
   right: 20px
-  top: -5px
+  top: 0px
   z-index: 50
 
 .label-red
@@ -560,7 +562,7 @@
   background: url(../images/product-label/label-red.svg) no-repeat center
   position: absolute
   right: 20px
-  top: -5px
+  top: 0px
   z-index: 50
 
 .label-blue
@@ -570,7 +572,7 @@
   background: url(../images/product-label/label-blue.svg) no-repeat center
   position: absolute
   right: 20px
-  top: -5px
+  top: 0px
   z-index: 50
 
 .label-pink
@@ -580,7 +582,7 @@
   background: url(../images/product-label/label-pink.svg) no-repeat center
   position: absolute
   right: 20px
-  top: -5px
+  top: 0px
   z-index: 50
 
 .label-yellow
@@ -590,7 +592,7 @@
   background: url(../images/product-label/label-yellow.svg) no-repeat center
   position: absolute
   right: 20px
-  top: -5px
+  top: 0px
   z-index: 50
 /** 緞帶樣式 **/
 .ribbon-green
@@ -600,7 +602,7 @@
   background: url(../images/product-label/ribbon-green.svg) no-repeat center
   position: absolute
   right: 0
-  top: -5px
+  top: 0px
   z-index: 50
 
 .ribbon-orange
@@ -610,7 +612,7 @@
   background: url(../images/product-label/ribbon-orange.svg) no-repeat center
   position: absolute
   right: 0
-  top: -5px
+  top: 0px
   z-index: 50
 
 .ribbon-pink
@@ -620,7 +622,7 @@
   background: url(../images/product-label/ribbon-pink.svg) no-repeat center
   position: absolute
   right: 0
-  top: -5px
+  top: 0px
   z-index: 50
 
 .ribbon-yellow
@@ -630,7 +632,7 @@
   background: url(../images/product-label/ribbon-yellow.svg) no-repeat center
   position: absolute
   right: 0
-  top: -5px
+  top: 0px
   z-index: 50
 
 .product-select
