chore: 購物車完成

--- a/assets/sass/component/_price-rate.sass
+++ b/assets/sass/component/_price-rate.sass
@@ -1,13 +1,13 @@
 .price-rate
   .product-price
     display: inline-block
-    color: $primary-color
+    color: #e02020
     font-size: 24px
     margin-bottom: 25px
     margin-right: 20px
 
     del
-      color: $disable
+      color: #0b1d37
       font-size: 14px
       display: block
       margin-bottom: 5px
