chore: 購物車hover icon

--- a/assets/sass/component/_product.sass
+++ b/assets/sass/component/_product.sass
@@ -645,4 +645,4 @@
   background-position: center
 
 .share-btn-icon:hover
-  background-image: url('../images/webs/share_g.svg')
+  background-image: url('../images/webs/share_hover.svg')
