chore: 購物車 step1 調整UI

--- a/assets/sass/basic/_color.sass
+++ b/assets/sass/basic/_color.sass
@@ -19,6 +19,9 @@ $gray-text: #adb5bd
   color: $primary-color !important
 
 
+.white-color
+  color: white
+
 .red-color
   color: $red !important
 
