--- a/assets/sass/component/_order-step.sass
+++ b/assets/sass/component/_order-step.sass
@@ -43,7 +43,7 @@
 				    
 					&::before 
 						// display: none
-						background: #88c74a
+						background: $primary-color
 					&::after 
 						background-color: $primary-color
 			.step 
