--- a/assets/sass/layout/_shop-cart.sass
+++ b/assets/sass/layout/_shop-cart.sass
@@ -1,6 +1,10 @@
 .shopping-cart
 	margin-bottom: 60px
 	.product-table
+		tbody
+			tr
+				height: 350px
+
 		.table
 			border: 1px solid $line
 			.product-clear
@@ -29,8 +33,7 @@
 
 				.product-iamge
 					.img-wrapper
-						height: 170px
-						width: 170px
+						height: 270px
 						// background-color: #f8f8f8
 						display: flex
 						align-items: center
