--- a/assets/sass/component/_card-border.sass
+++ b/assets/sass/component/_card-border.sass
@@ -1,4 +1,4 @@
-.card-border 
+.card-border
   border: 1px solid #f5f5f5
   width: 100%
   height: 100%
@@ -14,6 +14,8 @@
 
 .card-border-header
   border-bottom: 1px solid #f5f5f5
+  color: white
+  background-color: $primary-color
   min-height: 60px
   height: auto
   display: flex
@@ -35,7 +37,7 @@
 
 
 
-.card-border .square 
+.card-border .square
   width: 10px
   height: 10px
   background-color: #88c74a
